# selenium_tutor

./: pyproject.toml
pages/: base_page.py  form_page.py
tests/: test_form.py
