[tool.poetry]
name = "selenium-tutor1"
version = "0.1.0"
description = ""
authors = ["s.dzmitryienka <s.dzmitryienka@gmail.com>"]
readme = "README.md"
packages = [{include = "selenium_tutor1"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

